# python-keycloak-client

./: .gitignore  .pre-commit-config.yaml  .travis.yml  DockerfileDocs  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst
src/keycloak/: authz.py  client.py  exceptions.py  mixins.py  openid_connect.py  realm.py  uma.py  uma1.py  well_known.py
src/keycloak/admin/: __init__.py  base.py  clientroles.py  clients.py  groups.py  realm.py  roles.py  userroles.py  users.py
src/keycloak/admin/user/: usergroup.py  userroles.py
src/keycloak/admin/users/: userroles.py
src/keycloak/aio/: __init__.py  abc.py  authz.py  client.py  mixins.py  openid_connect.py  realm.py  uma.py  well_known.py
tests/integration/: Readme.md  __init__.py  conftest.py  test_admin_client.py  test_admin_realm.py  test_admin_user.py  test_openid_connect.py
tests/integration/data/realms/: test_realm-realm.json
tests/keycloak/: test_admin.py  test_authz.py  test_client.py  test_openid_connect.py  test_realm.py  test_uma.py  test_uma1.py
tests/keycloak/admin/: test_client_roles.py  test_groups.py  test_roles.py  test_user_roles.py  test_users.py
tests/keycloak/aio/: test_admin.py  test_authz.py  test_client.py  test_openid_connect.py  test_realm.py  test_uma.py
tests/keycloak/aio/admin/: test_roles.py  test_users.py
