[tool.poetry]
name = "python-keycloak-client"
version = "0.2.4-dev"
description = "Install Python Keycloak client."
authors = ["Peter Slump <peter@yarf.nl>"]
homepage = "https://github.com/Peter-Slump/python-keycloak-client"
license = "MIT"
readme = "README.rst"
packages = [
    { include = "keycloak", from = "src" }
]

[tool.poetry.dependencies]
python = ">3.7,<4.0"
requests = "^2.27.1"
python-jose = "^3.3.0"
aiohttp = { "version" = ">=3.4.4,<4", optional = true }

[tool.poetry.dev-dependencies]
pytest = ">= 6"
twine = "black"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^3.8.3"
pre-commit = "^2.7.1"
pytest-cov = "^2.10.1"
commitizen = "^2.4.2"
Sphinx = { "version" = "1.4.4", optional = true }
sphinx-autobuild = { "version" = "0.6.0", optional = true }
asynctest = "^0.13.0"
docker = "^5.0.3"
pytest-dependency = "^0.5.1"

[tool.poetry.extras]
aio = ["aiohttp"]
doc = ["Sphinx", "sphinx-autobuild"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov keycloak --cov-report xml --junit-xml=test-reports/junit.xml"

[tool.coverage.run]
source = ["keycloak"]

[tool.coverage.report]
fail_under = 75

[tool.coverage.xml]
output = "test-reports/coverage.xml"

[tool.tox]
isolated_build = "True"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
